k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votting-ingress
  labels:
    app: vote
    tier: frontend
    autor: rolando
spec:
  ingressClassName: nginx  
  rules:    
    - host: vote.arpsis.edu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vote-service
              port:
                number: 5000
    - host: result.arpsis.edu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: result-service
              port:
                number: 5001
